2009-09-24  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif-gtk/gtk-exif-entry-user-comment.c: Complete information
          about copyright. Fixes #1673969.

2009-09-23  Dan Fandrich <dan@coneharvesters.com>

	* Added the text of the LGPL V2.1 in COPYING so there isn't any
	  confusion as to the licensing terms of the project. GNU
	  autotools adds a GPL COPYING file by default if this doesn't
	  exist, which is wrong.

2005-08-15  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Jakub Bogusz <qboosh@pld-linux.org>:

	* po/pl.po: New

2005-03-24  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* autogen.sh, configure.in, */Makefile.am, ...: Updated build system.
	  - doesn't require gettextize any more (using autopoint now)
	  - uses all the built-in magic from autoreconf

2004-10-18  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: We are now working on 0.3.6.

2004-10-18  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif-gtk/gtk-exif-entry-generic.c:
	* libexif-gtk/gtk-exif-content-list.c:
	* configure.in: Make libexif-gtk work with versions < 0.6.12. We
	  are now working on 0.3.5.

2004-10-17  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: We have been working on 0.3.4 all the time.

2004-10-17  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif-gtk/gtk-exif-entry-version.c and others: Adapt to new
	  gtk API

2004-10-17  Lutz Mueller <lutz@users.sourceforge.net>

	First part of a patch to get libexif-gtk to compile again against
	current gtk. For now, libexif-gtk does not compile at all.

	* gtk-extensions/gtk-option-menu-option.[c,h]: Removed.
	* libexif-gtk/gtk-exif-browser.c: Redirect EXPOSURE_PROGRAM to 
	  the generic entry.
	* libexif-gtk/gtk-exif-tag-menu.[c,h]: Removed.
	* libexif-gtk/gtk-exif-entry-exposure.[c,h]: Removed. Now covered
	  by the generic entry.
	* configure.in: CURRENT = 5.

2003-08-01  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif-gtk/gtk-exif-browser.c: Implement removal of entries.
