@@ -1,2 +1,11 @@
-libexif-gtk/gtk-exif-browser.c
 gtk-extensions/gtk-menu-option.c
+libexif-gtk/gtk-exif-browser.c
+libexif-gtk/gtk-exif-content-list.c
+libexif-gtk/gtk-exif-entry-copyright.c
+libexif-gtk/gtk-exif-entry-date.c
+libexif-gtk/gtk-exif-entry-number.c
+libexif-gtk/gtk-exif-entry-option.c
+libexif-gtk/gtk-exif-entry-rational.c
+libexif-gtk/gtk-exif-entry-resolution.c
+libexif-gtk/gtk-exif-entry-user-comment.c
+libexif-gtk/gtk-exif-entry-version.c
